# mirror-core

./: pyproject.toml
src/: main.py
src/factories/: ingestor_factory.py
src/plugins/: base_plugin.py
src/plugins/ingestion_plugins/: csv.py  json.py  pdf.py  txt.py  xml.py
src/plugins/output_plugins/: __init__.py
src/plugins/transformation_plugins/: __init__.py
src/utils/: extract_metadata.py
