[tool.poetry]
name = "mirror-core"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mirror_core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.4.1"
python-dateutil = "^2.9.0.post0"
phonenumbers = "^8.13.35"
pandas = "^2.2.2"
orjson = "^3.10.1"
lxml = "^5.2.1"
openpyxl = "^3.1.2"
pdfplumber = "^0.11.0"
fpdf = "^1.7.2"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
opencv-python = "^4.9.0.80"
pytesseract = "^0.3.10"
camelot-py = {extras = ["ghostscript"], version = "^0.11.0"}
pypdf2 = "<3.0"
torch = "^2.3.0"
torchvision = "^0.18.0"
transformers = "^4.40.1"
tika = "^2.6.0"
layoutparser = "^0.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"
sphinx = "^7.3.7"
wheel = "^0.43.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
